--- a/three_project/index.html
+++ b/three_project/index.html
@@ -1,54 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-
-    <!-- Bootstrap CSS v5.0.2 -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Starter</title>
+    <!-- font-awesome -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
+
+    <!-- styles -->
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
       <section class="container">
-        <div class="title d-flex align-items-center flex-column justify-content-center">
-          <h2 class="text-center"><b>Our Review</b></h2>
-          <div class="col-2" style="width:200px;height:200px">
-            <img id="person-img"
-              src="./person-1.jpeg"
-              class="border rounded-circle img-fluid"
-              alt=""
-            />
+        <div class="title">
+          <h2>OUR REVIEWS</h2>
+          <div class="underline"></div>
+        </div>
+
+        <article class="review">
+          <div class="img-container">
+            <img src="./person-1.jpeg" id="person-img" alt="" />
           </div>
           <h4 id="person-name">Sara Jones</h4>
-          <h6 id="person-job" class="text-info">ux designer</h6>
-          <p id="person-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque aliquam ab accusantium, id sunt quia maxime illum quisquam. Porro sequi et cum voluptatibus nesciunt quia at nostrum ex, sed praesentium.</p>
-          <button id="prev"><</button>
-          <button id="next">></button>
-          <button id="surprise" class="btn btn-info">surprise me</button>
-        </div>
+          <p id="person-job">UX Designer</p>
+          <p id="person-text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit
+            recusandae omnis aperiam eum laudantium magnam consequuntur velit
+            repudiandae, non officia pariatur, autem assumenda laboriosam maxime
+            ea accusamus ex dicta cumque.
+          </p>
+          <div class="button-container">
+            <button id="prev" class="prev-btn"><i class="fas fa-chevron-left"></i></button>
+            <button id="next" class="prev-btn"><i class="fas fa-chevron-right"></i></button>
+          </div>
+          <button class="random-btn" id="surprise">Surprise Me</button>
+        </article>
       </section>
     </main>
-    <!-- Bootstrap JavaScript Libraries -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./sample.js"></script>
+    <!-- javascript -->
+    <script src="app.js"></script>
+    <script src="sample.js"></script>
   </body>
 </html>
